kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapiapp
spec:
  selector:
    matchLabels:
      app: strapiapp

  template:
    metadata:
      labels:
        app: strapiapp
    spec:
      containers:
      - name: strapiapp
        image: mauriciolucas22/strapapp:v2
        livenessProbe:
          httpGet:
            path: /_health
            port: 1337
            # httpHeaders:
            # - name: Custom-Header
            #   value: Awesome
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 10

        startupProbe:
          httpGet:
            path: /_health
            port: 1337
          failureThreshold: 50
          periodSeconds: 30

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: strapiapp-service
spec:
  selector:
    app: strapiapp
  ports:
  - port: 1337
    targetPort: 1337
