kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ssl-redirect: "false"
  labels:
    app: strapiapp
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/(/|$)(.*)
        backend:
          service:
            name: strapiapp-service
            port:
              number: 1337
      - pathType: Prefix
        path: /()(.*)
        backend:
          service:
            name: strapiapp-service
            port:
              number: 1337
